Fix horizontal scroll

--- a/src/widgets/layout/Layout.module.scss
+++ b/src/widgets/layout/Layout.module.scss
@@ -11,4 +11,5 @@
   flex-direction: column;
   flex: 1;
   overflow-y: auto;
+  overflow-x: hidden;
 }
